# FDTD-3D-DRH-Simulation-Engine

./: .gitignore  001_antenna_optimization.json  CHANGELOG.md  LICENSE  README.md  antenna_optimization.py  brain_tumor_segmentation_model.py  breast_tumor_segmentation_model.py  build_animations_from_streamed_frames.py  build_breast_animations_from_streamed_frames.py  cervical_tumor_segmentation_model.py  checkpoint_epoch_8.pth  cli.py  code_readability_principles.md  data_analysis_validation.py  fdtd_brain_simulation_engine.py  fdtd_breast_simulation_engine.py  fdtd_solver.py  generate_paper_results_section.py  multiview_visualization.py  plot_houle_style_plane_wave_validation.py  plot_pipeline_phases_waterfall.py  plot_scalability_benchmark.py  practice.py  practice_loops.py  pyproject.toml  pytest.ini  requirements.txt  run_paper_bundle.py  sar_computation.py  segmentation_loader.py  sources.py  thermal_solver.py  voxel_model.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: __init__.py  anatomy_config.py  tissues.py
configs/: paper_results_benchmark.yaml  paper_results_cw.yaml  paper_results_gaussian.yaml  paper_results_optimize.yaml  simulation_example.yaml  thesis_paper_brats_case002_cw.yaml  thesis_paper_cw_sinusoid.yaml  thesis_paper_gaussian_baseline.yaml  thesis_paper_optimize_antenna.yaml
core/: __init__.py
core/fdtd/: __init__.py  (+2 more)
docs/: FDTD_BRAIN_SIMULATION_DOCUMENTATION.md  PYPI_PACKAGING_TODO.md
fdtd_dashboard/: README.md  requirements.txt  streamlit_app.py
fdtd_equations_reference/: fdtd_equations_reference.aux  fdtd_equations_reference.fdb_latexmk  fdtd_equations_reference.fls  fdtd_equations_reference.out
tests/: conftest.py  test_engine_integration.py  test_load_optimized_config.py  test_packaging_smoke.py  test_practice_vs_cli.py  test_practice_vs_fdtd_boundaries.py  test_practice_vs_fdtd_kernels.py  test_practice_vs_fdtd_loops.py  test_practice_vs_fdtd_sources.py  test_practice_vs_materials_voxel_model.py  test_practice_vs_metrics_sar.py  test_practice_vs_metrics_thermal.py  test_simulation_config.py  test_validation_fdtd.py
workflows/: __init__.py  benchmark_pipeline.py  brain_pipeline.py
(+52 files in other folders)
