[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-drh"
version = "0.1.0"
description = "HERMES: patient-specific 3D FDTD DRH simulation (MRI voxels, SAR, thermal, antenna optimization)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [
  { name = "HERMES DRH Team" },
]
keywords = ["fdtd", "hyperthermia", "sar", "mri", "brain", "simulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11",
  "numba>=0.59",
  "nibabel>=5.2",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
segmentation = [
  "torch>=2.2,<2.11",
  "monai>=1.3",
]
dashboard = [
  "streamlit>=1.30",
]
all = [
  "torch>=2.2,<2.11",
  "monai>=1.3",
  "streamlit>=1.30",
]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.4",
  "black>=24",
  "build>=1.2",
  "twine>=5",
]

[project.scripts]
hermes-simulate = "hermes_drh.cli.main:main"
hermes-build-animations = "hermes_drh.visualization.animations:main"
hermes-dashboard = "hermes_drh.dashboard.app:main"

[project.urls]
Homepage = "https://github.com/hermes-drh/hermes-drh"
Documentation = "https://github.com/hermes-drh/hermes-drh#readme"
Repository = "https://github.com/hermes-drh/hermes-drh"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_drh = ["configs/*.yaml", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "slow: longer subprocess tests",
  "integration: subprocess engine integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
